--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,36 +8,34 @@
   justify-content: center;
 }
 
-.inputCountry{
-  width: 51%; 
-  margin-bottom: 1px;  
- 
+.handle{ 
+  display: flex;
+  flex-flow: column nowrap;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
 }
 
-.backgroundImage{
-  z-index: 0;
-  width: 25%;
-  height: 60%;
-  /* border-top-right-radius: 8px;
-  border-top-left-radius: 8px; */
-  position: absolute;
+.stars, .twinkling {
+	position:absolute;
+	display:block;
+	top:0; bottom:0;
+	left:0; right:0;
+	width:100%; height:100%;
 }
 
-.card{
-  z-index: 1;
-  width: 25%;
-  height: 60%;  
-  color: white;
-  background-color: red;
+.stars {
+	z-index: 0;
+	background: #000 url('https://image.ibb.co/mjnygo/stars.png') repeat top center;
 }
 
-.country{
-  font-size: 40px;
-  margin-bottom: 1%;
+.twinkling{
+	z-index: 1;
+	background:transparent url('https://image.ibb.co/ir1DE8/twinkling.png') repeat top center;
+	animation: move-twink-back 200s linear infinite;
 }
 
-.city{
-  font-size: 30px;
-  margin-bottom: 1%;
+@keyframes move-twink-back {
+	from {background-position:0 0;}
+	to {background-position:-10000px 5000px;}
 }
-
