--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -15,7 +15,8 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;   ;
+    justify-content: space-around;
+    margin-right: 10%;
    
 }
 .container{
