--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
+  background-color: #ececec
 }
 
 .handle{ 
@@ -15,11 +16,12 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  z-index: 2; 
+  z-index: 2;   
 }
 
 .globeAndCard{
   display: flex;
+  justify-content: flex-end;
 }
 
 .stars, .twinkling {
