--- a/client/src/components/DataCard/DataCara.css
+++ b/client/src/components/DataCard/DataCara.css
@@ -1,15 +1,24 @@
 .dataCard{
-    height: 100%;
+    height: 100%;   
     width: 30%;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
      margin-left: 3%;
+     border-radius: 4px;
+     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
    
+}
+
+.dataCard:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .current:hover,.weekly:hover{
     transform: scale(1.05);
+    transition:  0.45s ease; 
+    background: rgba(40, 55, 71,0.9);
 }
 
 .current{
@@ -17,12 +26,12 @@
     flex-flow: column nowrap;
     align-items: flex-start;
     justify-content: space-between;
-    height: 50%;        
+    height: 45%;        
       padding: 0.5rem 1rem;
       text-decoration: none;      
       border-radius: 4px;
       transition: 0.5s;
-      background: rgba(40, 55, 71,0.9);
+      background: rgba(40, 55, 71,0.7);
       box-shadow: 6px 5px 17px -8px rgba(0,0,0,0.69);
       -webkit-box-shadow: 6px 5px 17px -8px rgba(0,0,0,0.69);
       -moz-box-shadow: 6px 5px 17px -8px rgba(0,0,0,0.69); 
@@ -101,13 +110,13 @@
 }
 
 .weekly{  
-    height: 50%;  
+    height: 45%;  
     width: 80%;    
     margin: 1.5%;
     margin-top: 1px;  
     padding: 0.5rem 1rem;
       text-decoration: none;
-      background: rgba(40, 55, 71,0.9);
+      background: rgba(40, 55, 71,0.7);
       border-radius: 4px;
       transition: 0.5s;
       box-shadow: 6px 5px 17px -8px rgba(0,0,0,0.69);
