--- a/client/src/components/Globe/Globe.css
+++ b/client/src/components/Globe/Globe.css
@@ -2,9 +2,11 @@
    z-index: 2;       
    /* width: 50%;
    height: 90%;      */
+   margin-right: 1.5%;
    margin-left: 1.5%;
-   background-color: #ececec;
-   
+   background-color: #ede9dd;
+   border-radius: 4px;
+   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .loading{
